--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Copenhagen",
-  "author": "Zendesk",
-  "version": "1.5.0",
+  "name": "GG Theme",
+  "author": "tgunnoe",
+  "version": "0.0.0",
   "api_version": 1,
   "default_locale": "en-us",
   "settings": [{
@@ -11,7 +11,7 @@
       "type": "color",
       "description": "brand_color_description",
       "label": "brand_color_label",
-      "value": "#0072EF"
+      "value": "#069076"
     }, {
       "identifier": "brand_text_color",
       "type": "color",
@@ -29,7 +29,7 @@
       "type": "color",
       "description": "link_color_description",
       "label": "link_color_label",
-      "value": "#0072EF"
+      "value": "#069076"
     }, {
       "identifier": "background_color",
       "type": "color",
