Match responsive header

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
   "name": "GG Theme",
   "author": "tgunnoe",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "api_version": 1,
   "default_locale": "en-us",
-  "settings": [{
+    "settings": [{
+    "label": "custom_group_label",
+    "variables": []
+    }, {
     "label": "colors_group_label",
     "variables": [{
       "identifier": "brand_color",
@@ -100,6 +103,24 @@
       "type": "file",
       "description": "favicon_description",
       "label": "favicon_label"
+    }, {
+      "identifier": "site_name1",
+      "type": "text",
+      "description": "site_name1_description",
+      "label": "site_name1_label",
+      "value": "Ghost"
+    }, {
+      "identifier": "site_name2",
+      "type": "text",
+      "description": "site_name2_description",
+      "label": "site_name2_label",
+      "value": "Gunner"
+    }, {
+      "identifier": "phone_number",
+      "type": "text",
+      "description": "phone_number_description",
+      "label": "phone_number_label",
+      "value": "800-555-5555"
     }]
   }, {
     "label": "images_group_label",
