--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "GG Theme",
   "author": "tgunnoe",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "api_version": 1,
   "default_locale": "en-us",
     "settings": [{
@@ -18,6 +18,12 @@
             "description": "main_site_link_text_description",
             "label": "main_site_link_text_label",
             "value": "Back to site"
+        }, {
+            "identifier": "help_center_name",
+            "type": "text",
+            "description": "help_center_name_description",
+            "label": "help_center_name_label",
+            "value": "Support Center"
         }, {
             "identifier": "site_name1",
             "type": "text",
@@ -36,6 +42,18 @@
             "description": "phone_number_description",
             "label": "phone_number_label",
             "value": "800-555-5555"
+        }, {
+            "identifier": "phone_number",
+            "type": "text",
+            "description": "phone_number_description",
+            "label": "phone_number_label",
+            "value": "800-555-5555"
+        }, {
+            "identifier": "footer_disclaimer",
+            "type": "text",
+            "description": "footer_disclaimer_description",
+            "label": "footer_disclaimer_label",
+            "value": "Copyright 2019"
         }
       ]
     }, {
